<resources>
    <string name="app_name">Cute Flashcards</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- AdMob関連  See gradle.properties -->
    <string name="admob_size_banner">BANNER</string>
    <!-- For Test -->
    <string name="admob_banner_unit_id_main">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Drawer Menu 関連 -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="howto_video">Manual Movie(YouTube)</string>
    <string name="howto_web">Manual Web</string>
    <string name="import_data">Data Import</string>
    <string name="export_data">Data Backup</string>
    <string name="skin_design">Skin Settings</string>
    <string name="version">Version Settings</string>
    <string name="icon_auto">Auto Icon Settings</string>
    <string name="splash_design">Splash Design</string>
    <string name="info">What\'s New</string>
    <string name="question_us">Question</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="review_us">Review</string>
    <string name="share_us">Share</string>
    <string name="about_license">About License</string>
    <string name="about_us">About Us</string>

    <string name="icon_description">The icon image used in the app uses the material data recorded in "Petit ☆ Kira JS Material Collection ♪". Its copyright belongs to Impress and Power Design.</string>

    <!-- 汎用マーク 関連 -->
    <string name="double_circle">◎</string>
    <string name="close_mark">Ⅹ</string>

    <string name="menu_search">Search</string>
    <string name="please_keywords">Search words</string>

    <!-- ボタンラベル -->
    <string name="close">Close</string>
    <string name="go_next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>

    <!-- FolderSettingsDialog タブメニュー -->
    <string name="icon">Icon</string>
    <string name="cover">Cover</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="fusen">Sticker</string>
    <string name="others">Others</string>

    <!-- バックアップ画面内表記 -->
    <string name="backup">Backup</string>
    <string name="backup_to">Backup destination</string>
    <string name="internal_disk">Save to internal storage</string>
    <string name="sd_card">Save to SD card</string>
    <string name="google_drive">Upload and save to Google Drive</string>

    <!-- アイコン自動表示設定内表記 -->
    <string name="case_on">[Automatic Display ON]</string>
    <string name="case_off">[Automatic Display OFF]</string>
    <string name="case_on_detail">Icons related to the current version are displayed randomly</string>
    <string name="case_off_detail">The icon selected in the past or the icon arbitrarily assigned by the application is fixedly displayed. You can change it freely on the icon selection screen. Icons such as menus remain automatically displayed.</string>


    <!-- ダイアログタイトル -->
    <string name="dlg_title_new">New</string>
    <string name="dlg_title_edit">Edit</string>
    <string name="dlg_title_confirm">Confirm</string>
    <string name="dlg_title_save">Save</string>
    <string name="dlg_title_goback_list">Back to List</string>
    <string name="dlg_title_save_confirm">Confirm to save</string>
    <string name="dlg_title_delete_confirm">Confirm to delete</string>
    <string name="dlg_title_information">Information</string>
    <string name="dlg_title_change_skin_confirm">Change skin</string>
    <string name="dlg_title_change_version_confirm">Change version</string>
    <string name="dlg_title_backup">Backup</string>
    <string name="dlg_title_icon_auto_off">Icon Auto display OFF</string>

    <!-- ダイアログメッセージ -->
    <string name="dlg_msg_go_back_to_list">You will be returned to the list without saving your settings. Is that okay?</string>
    <string name="dlg_msg_go_back_to_list_simple">You will be returned to the list. Is that okay?</string>
    <string name="dlg_msg_exercise_end">You have reached the last card.</string>
    <string name="dlg_msg_delete_folder">Delete this deck. You will not be able to restore. Are you sure to delete it?</string>
    <string name="dlg_msg_delete_card">Delete this word card. You will not be able to restore. Are you sure to delete it?</string>
    <string name="dlg_msg_save">Save your settings and return to the list. Is that okay?</string>
    <string name="dlg_msg_save_default">Save settings by default and return to the list. Is that okay?</string>
    <string name="dlg_msg_first_card_now">Displaying the first card.</string>
    <string name="dlg_msg_no_card_in_folder">There is no card.</string>
    <string name="dlg_msg_change_skin">Skin was changed.</string>
    <string name="dlg_msg_change_version">The Version was changed.</string>
    <string name="dlg_msg_no_change">Same as the current setting</string>
    <string name="dlg_msg_backup_policy">The registered wordbook data and setting information are automatically backed up to Google Drive by the Android system. Please confirm that the backup function is turned on in "Settings" of Android. In addition, the data backed up in Google Drive will be automatically restored when you change models or when you uninstall the app and then install it again.</string>
    <string name="dlg_msg_force_all_card_exercise">Since the selected card does not exist, all cards are targeted.</string>
    <string name="dlg_msg_icon_auto_off">Currently, the icon is automatically displayed. Do you want to turn it off? If you want to turn it back on later, set it in the slide menu.</string>

    <!-- ダイアログボタン -->
    <string name="go_back_list">Back to List</string>
    <string name="try_again">Try again</string>
    <string name="delete">Delete</string>
    <string name="no_delete">No delete</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="change_restart">Change and Restart</string>
    <string name="icon_auto_off">Turn off</string>
    <string name="icon_auto_still_on">Keep ON</string>

    <!-- FolderSettings -->
    <string name="background_color_setting">♣️❤️️ Background Color ♦️️♠️️️️️</string>
    <string name="select_from_default">Default Colors</string>
    <string name="select_freely">Choose freely</string>
    <string name="vivid_color">"Vivid   "</string>
    <string name="pastel_color">"Pastel "</string>
    <string name="text_color_setting">♣️❤️️ Text Color ♦️️♠️️️️️</string>
    <string name="sample_text">Aa</string>
    <string name="folder_title_here">New book title here</string>

    <!-- Exercise -->
    <string name="exercise_filter_settings">Exercise Filter</string>
    <string name="all_cards">All cards</string>
    <string name="not_learned_only">Unlearned cards</string>
    <string name="fusen_only">Cards with sticker</string>

    <!-- 問合せメール -->
    <string name="question_mail_subject">Opinions / Questions</string>
    <string name="question_mail_body">"Thank you for using the app. ¥n¥nFeel free to write your opinions and questions. ¥nThank you in advance.\n-----------------------------------------------¥n"</string>

    <!-- アプリシェア -->
    <string name="app_share_subject">Share my favorite application</string>
    <string name="app_share_body">Cute Flashcards</string>

    <!-- その他 -->
    <string name="folder_title_new">New Title</string>
    <string name="card_front">Front</string>
    <string name="card_back">Back</string>

    <string name="back_mask">♦️♣️❤️♠️️</string>

    <!-- 警告系汎用メッセージ -->
    <string name="warn_001">Warning message</string>

    <!-- エラー系汎用メッセージ -->
    <string name="error_001">Error message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_icon">【About Icon】</string>
    <string name="about_fusen_icon">【About illustraion on the stickers】</string>
    <string name="about_fusen_icon_description">The copyright of the animal illustrations on the stickers belongs to the following copyright holder.</string>
    <string name="fusen_icon_copyright_holder">[©️ holder]</string>
    <string name="fusen_icon_copyrighter">irasutoya</string>


</resources>
