<?xml version="1.0" encoding="utf-8"?>

<!--
   GoobleDriveへの自動バックアップ機能で対応することになったので、
   当モジュールは不要になった（備忘のために残しておく）
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:text="@string/backup_to"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/linerLayoutBackupTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/textViewTitle"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/radioGroupBackupTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButtonInternalDisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/internal_disk" />
            <TextView
                android:id="@+id/textViewInternalPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="path"/>
            <RadioButton
                android:id="@+id/radioButtonSdCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sd_card" />
            <TextView
                android:id="@+id/textViewSdPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="path"/>
        </RadioGroup>
    </LinearLayout>>

    <LinearLayout
        android:id="@+id/linearLayoutGoogleDrive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/linerLayoutBackupTo"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/google_drive" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutBackup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutGoogleDrive"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/buttonBackup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:text="バックアップする" />
    </LinearLayout>


</RelativeLayout>