<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutWhole"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewBgColorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/background_color_setting"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSpecifiedColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_from_default"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textViewBgColorTitle"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayoutPastel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpecifiedColor">

<!--        verticalSpacingで線が引かれるので、更にmarginEndを指定すると太くなるので指定不要-->
        <GridView
            android:id="@+id/gridViewPastel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="1dp"
            android:numColumns="6"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp"
            android:horizontalSpacing="1dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewFreeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_freely"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPastel"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayoutColorSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFreeColor">

        <LinearLayout
            android:id="@+id/linearLayoutColorSliderDeep"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/vivid_color"
                android:textSize="14sp" />
            <net.somethingnew.kawatan.flower.ColorSliderView
                android:id="@+id/colorSliderDeep"
                android:layout_width="250dp"
                app:cs_hsv_saturation="0.8"
                app:cs_circle_radius="30"
                app:cs_stroke_width="10"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFreeColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/shadow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutColorSliderLight"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/pastel_color"
                android:textSize="14sp" />
            <net.somethingnew.kawatan.flower.ColorSliderView
                android:id="@+id/colorSliderLight"
                android:layout_width="250dp"
                app:cs_hsv_saturation="0.2"
                app:cs_circle_radius="30"
                app:cs_stroke_width="10"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFreeColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/shadow"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewFontTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_color_setting"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutColorSlider" />

    <!-- 上記の規定色用のGridViewと同じ設定で文字列設定も作ろうとしたが、格子の罫線が引けないので断念してボタンに変更する。
            多分、上記のGridViewとの違いは、同じ背景色を使うためが原因？
            上記のGridViewは各セルの色が違うので、格子の罫線が引かれているように見えているだけ？-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFontTitle">

        <Button
            android:id="@+id/buttonTextColor1"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/border_simple"
            android:text="@string/sample_text"
            android:textColor="#000000"
            android:textSize="20sp" />
        <Button
            android:id="@+id/buttonTextColor2"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/border_simple"
            android:text="@string/sample_text"
            android:textColor="#808080"
            android:textSize="20sp" />
        <Button
            android:id="@+id/buttonTextColor3"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/border_simple"
            android:text="@string/sample_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <Button
            android:id="@+id/buttonTextColor4"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/border_simple"
            android:text="@string/sample_text"
            android:textColor="#FF00FF"
            android:textSize="20sp" />
        <Button
            android:id="@+id/buttonTextColor5"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/border_simple"
            android:text="@string/sample_text"
            android:textColor="#008000"
            android:textSize="20sp" />
        <Button
            android:id="@+id/buttonTextColor6"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/border_simple"
            android:text="@string/sample_text"
            android:textColor="#0000FF"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>